fix default font-weight for readability on low dpi screens

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -60,6 +60,7 @@ html {
 
 body {
   color: #515151;
+  font-weight: 300;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
